--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -15,6 +15,10 @@
     "moduleDetection": "force",
     "noEmit": true,
     "jsx": "react-jsx",
+    "paths": {
+      "@shared/*": ["./src/shared/*"],
+      "@breeds/*": ["./src/features/breeds/*"]
+    },
 
     /* Linting */
     "strict": true,
