Optimizations for tree shakin icons library

--- a/tsconfig.app.json
+++ b/tsconfig.app.json
@@ -20,7 +20,8 @@
       "@/*": ["./src/*"],
       "@shared/*": ["./src/shared/*"],
       "@cats/*": ["./src/features/cats/*"],
-      "@breeds/*": ["./src/features/breeds/*"]
+      "@breeds/*": ["./src/features/breeds/*"],
+      "@favourites/*": ["./src/features/favourites/*"]
     },
 
     /* Linting */
